# 2giants-cli

./: .gitignore  pyproject.toml
.agents/: router.md
src/twogiants/: cli.py  main.py
src/twogiants/agents/: __init__.py  router.py
src/twogiants/tools/: __init__.py  file_tools.py  shell_tools.py
tests/: test_file_tools.py  test_gemini.py  test_shell_tools.py
